took example text out of .sty

--- a/pd2.sty
+++ b/pd2.sty
@@ -33,11 +33,10 @@
   \begin{singlespace}
     \begin{titlepage}
       \begin{center}
-        \large\textbf{\MakeUppercase{University of Waterloo}} \\
+        \textbf{\MakeUppercase{University of Waterloo}} \\
         #1
         \vfill
         {
-          \large
           \textsc{\textbf{\MakeUppercase{#2}}}
         }
         \vfill
@@ -69,10 +68,9 @@
     #6
 
     Sincerely, \\ \\
-    #7
-
+    #7 \\
     #4 \\
-    ID#5
+    ID #5
   \end{waterlooletter}
 }
 
@@ -89,31 +87,6 @@
     #1
   \end{thebibliography}
   \newpage
-}
-
-\newcommand{\examplereport}{
-  \mySection{My Amazing Section}{
-    \lipsum[2] % remove this line
-    \mySubSection{My Amazing SubSection} {
-      \lipsum[12] % remove this line
-      \mySubSubSection{My Amazing SubSubSection} {
-        \lipsum[10] % remove this line
-        \myFigure{0.10}{exampleimage.jpg}{Hello, World} % remove this line
-        \lipsum[11-12] %remove this line
-        \myTable{0.1}{exampleimage.jpg}{Hello, Table}
-      }
-    }
-  }
-
-  \mySection{My Amazing Section}{
-    \lipsum[2] % remove this line
-    \mySubSection{My Amazing SubSection} {
-      \lipsum[12] % remove this line
-      \mySubSubSection{My Amazing SubSubSection} {
-        \lipsum[18-21] % remove this line
-      }
-    }
-  }
 }
 
 \newcommand{\addchecklistappendix}{
