Added example table:

--- a/report.tex
+++ b/report.tex
@@ -110,16 +110,17 @@
 
   % Write your body here
 
-  %%%%%%% Example, remove this entire block %%%%%%%%%
+  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+  %%%%%%% This is an example, remove this entire block %%%%%%%%%
   \mySection{My Amazing Section}{
     \lipsum[2] % remove this line
     \mySubSection{My Amazing SubSection} {
       \lipsum[12] % remove this line
       \mySubSubSection{My Amazing SubSubSection} {
         \lipsum[10] % remove this line
-        \myFigure{0.10}{exampleimage.jpg}{Hello, World} % remove this line
+        \myFigure{0.10}{examplefigure.jpg}{Hello, World} % remove this line
         \lipsum[11-12] %remove this line
-        \myTable{0.1}{exampleimage.jpg}{Hello, Table}
+        \myTable{0.4}{exampletable.png}{Hello, Table}
       }
     }
   }
@@ -133,8 +134,8 @@
       }
     }
   }
-  %%%%%%% Example, remove this entire block %%%%%%%%%
-
+  %%%%%%% This is an example, remove this entire block %%%%%%%%%
+  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 }
 
 % Conclusions
