--- a/report.tex
+++ b/report.tex
@@ -8,17 +8,17 @@
 
 % Your information
 %   Enter your report information here
-\newcommand{\myFaculty}{Faculty of Mathematics}
-\newcommand{\myTitle}{Lorem Ipsum}
-\newcommand{\myName}{Liam Horne}
-\newcommand{\myTerm}{2A}
-\newcommand{\myProgram}{Computer Science}
-\newcommand{\myIdNumber}{20465555}
-\newcommand{\myAddress}{123 Apple Street}
-\newcommand{\myCity}{Cambridge, Ontario}
-\newcommand{\myPostalCode}{A1X B2Y}
-\newcommand{\myPD}{PD2: Critical Reflection and Report Writing}
-\newcommand{\myUwLocation}{Waterloo, Ontario}
+\faculty{Faculty of Mathematics}
+\reporttitle{Lorem Ipsum}
+\fullname{Liam Horne}
+\term{2A}
+\program{Computer Science}
+\studentid{20465555}
+\address{123 Apple Street}
+\city{Cambridge, Ontario}
+\postalcode{A1X B2Y}
+\pdtitle{PD2: Critical Reflection and Report Writing}
+\waterloolocation{Waterloo, Ontario}
 
 % Title Page (ignore)
 %   Creates the title page based on your information above
