--- a/pd2.sty
+++ b/pd2.sty
@@ -5,6 +5,50 @@
 \usepackage{color}
 \usepackage[hmargin=1.5in, vmargin=1.5in]{geometry}
 
+\newcommand{\faculty}[1]{
+\newcommand{\myFaculty}{#1}
+}
+
+\newcommand{\reporttitle}[1] {
+\newcommand{\myTitle}{Lorem Ipsum}
+}
+
+\newcommand{\fullname}[1] {
+\newcommand{\myName}{Liam Horne}
+}
+
+\newcommand{\term}[1] {
+\newcommand{\myTerm}{2A}
+}
+
+\newcommand{\program}[1] {
+\newcommand{\myProgram}{Computer Science}
+}
+
+\newcommand{\studentid}[1] {
+\newcommand{\myIdNumber}{20465555}
+}
+
+\newcommand{\address}[1] {
+\newcommand{\myAddress}{123 Apple Street}
+}
+
+\newcommand{\city}[1] {
+\newcommand{\myCity}{Cambridge, Ontario}
+}
+
+\newcommand{\postalcode}[1] {
+\newcommand{\myPostalCode}{A1X B2Y}
+}
+
+\newcommand{\pdtitle}[1] {
+\newcommand{\myPD}{PD2: Critical Reflection and Report Writing}
+}
+
+\newcommand{\waterloolocation}[1] {
+\newcommand{\myUwLocation}{Waterloo, Ontario}
+}
+
 \newlength\mylen
 \settowidth\mylen{Figure\ }
 \addtolength\cftfignumwidth{\mylen}
@@ -26,33 +70,33 @@
 {\contentsmargin{0pt}
     \thecontentslabel\enspace%
     }
-{\contentsmargin{0pt}}
-{\titlerule*[.5pc]{.}\contentspage}
-[]
+    {\contentsmargin{0pt}}
+    {\titlerule*[.5pc]{.}\contentspage}
+    []
 
-  \begin{singlespace}
+    \begin{singlespace}
     \begin{titlepage}
-      \begin{center}
-        \textbf{\MakeUppercase{University of Waterloo}} \\
-        #1
-        \vfill
-        {
-          \textsc{\textbf{\MakeUppercase{#2}}}
-        }
-        \vfill
-        #3
-        \vfill
-        Prepared by \\
-        #4
-      \end{center}
+    \begin{center}
+    \textbf{\MakeUppercase{University of Waterloo}} \\
+    #1
+    \vfill
+    {
+    \textsc{\textbf{\MakeUppercase{#2}}}
+    }
+    \vfill
+    #3
+    \vfill
+    Prepared by \\
+    #4
+    \end{center}
     \end{titlepage}
-  \end{singlespace}
+    \end{singlespace}
 
 
-}
+    }
 
-\newcommand{\waterlooletterofsubmittal}[7] {
-  \begin{waterlooletter}
+    \newcommand{\waterlooletterofsubmittal}[7] {
+    \begin{waterlooletter}
     #1 \\
     #2 \\
     #3 \\ \\
@@ -71,141 +115,141 @@
     #7 \\
     #4 \\
     ID #5
-  \end{waterlooletter}
-}
+    \end{waterlooletter}
+    }
 
-\newenvironment{waterlooletter}{
-  \begin{singlespace}}{
-  \end{singlespace}
-  \thispagestyle{empty}
-  \newpage
-}
+    \newenvironment{waterlooletter}{
+    \begin{singlespace}}{
+    \end{singlespace}
+    \thispagestyle{empty}
+    \newpage
+    }
 
-\newcommand{\makereferences}[1]{
-  \addcontentsline{toc}{section}{References}
-  \begin{thebibliography}{9}
+    \newcommand{\makereferences}[1]{
+    \addcontentsline{toc}{section}{References}
+    \begin{thebibliography}{9}
     #1
-  \end{thebibliography}
-  \newpage
-}
+    \end{thebibliography}
+    \newpage
+    }
 
-\newcommand{\addchecklistappendix}{
-Your report must:
-\begin{itemize}
-\item $\left[ Y \right]$ Include 4-6 pages of body content. Figures or tables that are included in the body are excluded in the 4-6 page count. (Example: 8 pages of content that includes a one-page figure and a half-page table counts as 6.5 pages of body content.)  Adherence to the 3Cs (clarity, conciseness, and coherence) will allow you to meet this page limit.
-\item $\left[ Y  \right]$ Include at least one table (Place the table in the body of your report if you discuss it in detail; place the table in an appendix if your analysis refers to it only briefly.)
-\item $\left[ Y  \right]$ Include at least one figure (Place the figure in the body of your report if you discuss it in detail; place the figure in an appendix if your analysis refers to it only briefly.)
-\item $\left[ Y  \right]$ Use a 12-point serif font
-\item $\left[ Y  \right]$ Be double-spaced
-\item $\left[ Y \right]$ Be written in formal, standard English, with no contractions
-\item $\left[ Y  \right]$ Be spellchecked and proofread
-\item $\left[ Y \right]$ Include pages numbered according to the conventions described in the Report Resources tab.
-\end{itemize}
-Your report must conform to the format and conventions described in the Report Resources page. You do not have to bind your report or include a front cover because you will submit your report to us online. Your report will include the following pages and sections:
-\begin{itemize}
-\item $\left[ Y \right]$ Title page
-\item $\left[ Y \right]$ Letter of submittal (addressed to the PD 2 course instructor)
-\item $\left[ Y \right]$ Table of contents
-\item $\left[ Y \right]$ List of figures and tables, if appropriate (Figures or tables in an appendix should not be listed on the List of figures and tables; figures or tables elsewhere in your report are required to bbe on this list.)
-\item $\left[ Y \right]$ Summary
-\item $\left[ Y \right]$ Introduction
-\item $\left[ Y \right]$ Body (that includes both an objective analytical component and a reflective component)
-\item $\left[ Y \right]$ Conclusions (the section is "conclusions" as in "findings", not "conclusion")
-\item $\left[ Y \right]$ Recommendations (specific, measurable, and attainable)
-\item $\left[ Y \right]$ References
-\item $\left[ Y \right]$ Appendices (you need at least one appendix which includes this checklist)
-\end{itemize}
-}
+    \newcommand{\addchecklistappendix}{
+    Your report must:
+    \begin{itemize}
+    \item $\left[ Y \right]$ Include 4-6 pages of body content. Figures or tables that are included in the body are excluded in the 4-6 page count. (Example: 8 pages of content that includes a one-page figure and a half-page table counts as 6.5 pages of body content.)  Adherence to the 3Cs (clarity, conciseness, and coherence) will allow you to meet this page limit.
+    \item $\left[ Y  \right]$ Include at least one table (Place the table in the body of your report if you discuss it in detail; place the table in an appendix if your analysis refers to it only briefly.)
+    \item $\left[ Y  \right]$ Include at least one figure (Place the figure in the body of your report if you discuss it in detail; place the figure in an appendix if your analysis refers to it only briefly.)
+    \item $\left[ Y  \right]$ Use a 12-point serif font
+    \item $\left[ Y  \right]$ Be double-spaced
+    \item $\left[ Y \right]$ Be written in formal, standard English, with no contractions
+    \item $\left[ Y  \right]$ Be spellchecked and proofread
+    \item $\left[ Y \right]$ Include pages numbered according to the conventions described in the Report Resources tab.
+    \end{itemize}
+    Your report must conform to the format and conventions described in the Report Resources page. You do not have to bind your report or include a front cover because you will submit your report to us online. Your report will include the following pages and sections:
+    \begin{itemize}
+    \item $\left[ Y \right]$ Title page
+    \item $\left[ Y \right]$ Letter of submittal (addressed to the PD 2 course instructor)
+    \item $\left[ Y \right]$ Table of contents
+    \item $\left[ Y \right]$ List of figures and tables, if appropriate (Figures or tables in an appendix should not be listed on the List of figures and tables; figures or tables elsewhere in your report are required to bbe on this list.)
+    \item $\left[ Y \right]$ Summary
+    \item $\left[ Y \right]$ Introduction
+    \item $\left[ Y \right]$ Body (that includes both an objective analytical component and a reflective component)
+    \item $\left[ Y \right]$ Conclusions (the section is "conclusions" as in "findings", not "conclusion")
+    \item $\left[ Y \right]$ Recommendations (specific, measurable, and attainable)
+    \item $\left[ Y \right]$ References
+    \item $\left[ Y \right]$ Appendices (you need at least one appendix which includes this checklist)
+    \end{itemize}
+    }
 
-\newcommand{\addanappendix}[2]{
-  \tocsection{#1}
-  #2
-}
+    \newcommand{\addanappendix}[2]{
+    \tocsection{#1}
+    #2
+    }
 
-\makeatletter
-  \renewcommand\ext@table{lof}
-\makeatother
+    \makeatletter
+    \renewcommand\ext@table{lof}
+    \makeatother
 
-\renewcommand\cftfigpresnum{Figure }
-\renewcommand\cfttabpresnum{Table }
+    \renewcommand\cftfigpresnum{Figure }
+    \renewcommand\cfttabpresnum{Table }
 
-\newcommand{\mytableofcontents} {
-  \tableofcontents
-  \newpage
-  \begin{center}
-  \tocsection{List of Tables and Figures}
-  \end{center}
-  \listoffigures
-  \newpage
-}
+    \newcommand{\mytableofcontents} {
+    \tableofcontents
+    \newpage
+    \begin{center}
+    \tocsection{List of Tables and Figures}
+    \end{center}
+    \listoffigures
+    \newpage
+    }
 
-\newcommand{\mySection}[2] {
-  \section{#1}
-  #2
-}
+    \newcommand{\mySection}[2] {
+    \section{#1}
+    #2
+    }
 
-\newcommand{\mySubSection}[2] {
-  \begin{addmargin}[1.5em]{0em}
-  \subsection{#1}
-  #2
-  \end{addmargin}
-}
+    \newcommand{\mySubSection}[2] {
+    \begin{addmargin}[1.5em]{0em}
+    \subsection{#1}
+    #2
+    \end{addmargin}
+    }
 
-\newcommand{\mySubSubSection}[2] {
-  \begin{addmargin}[1.5em]{0em}
-  \subsubsection{#1}
-  #2
-  \end{addmargin}
-}
+    \newcommand{\mySubSubSection}[2] {
+    \begin{addmargin}[1.5em]{0em}
+    \subsubsection{#1}
+    #2
+    \end{addmargin}
+    }
 
-\newcommand{\myFigure}[3] {
-  \begin{figure}
-  \centering
-  \scalebox{#1}{\includegraphics{#2}}
-  \caption{#3}
-  \end{figure}
-}
+    \newcommand{\myFigure}[3] {
+    \begin{figure}
+    \centering
+    \scalebox{#1}{\includegraphics{#2}}
+    \caption{#3}
+    \end{figure}
+    }
 
-\newcommand{\myTable}[3] {
-  \begin{table}
-  \centering
-  \scalebox{#1}{\includegraphics{#2}}
-  \caption{#3}
-  \end{table}
-}
+    \newcommand{\myTable}[3] {
+    \begin{table}
+    \centering
+    \scalebox{#1}{\includegraphics{#2}}
+    \caption{#3}
+    \end{table}
+    }
 
-\def\thesection{\arabic{section}.0 }
-\def\thesubsection{\arabic{section}.\arabic{subsection}}
+    \def\thesection{\arabic{section}.0 }
+    \def\thesubsection{\arabic{section}.\arabic{subsection}}
 
-\renewcommand{\contentsname} {
-  \begin{center}
+    \renewcommand{\contentsname} {
+    \begin{center}
     Table of Contents
-  \end{center}
-}
+    \end{center}
+    }
 
-\newcommand{\bulletpoints}[1]{
-  \begin{spaceditemize}
-  #1
-  \end{spaceditemize}
-}
+    \newcommand{\bulletpoints}[1]{
+    \begin{spaceditemize}
+    #1
+    \end{spaceditemize}
+    }
 
-\renewcommand{\listfigurename}{}
-\renewcommand{\cftsecleader}{\bfseries\cftdotfill{\cftdotsep}}
-\renewcommand{\cftfigpresnum}{Figure }
-\renewcommand{\cftfigaftersnum}{ --- }
-\renewcommand{\cftfignumwidth}{65pt}
-\newcommand{\tocsection}[1]{
-\section*{#1}
-\addcontentsline{toc}{section}{#1}
-}
+    \renewcommand{\listfigurename}{}
+    \renewcommand{\cftsecleader}{\bfseries\cftdotfill{\cftdotsep}}
+    \renewcommand{\cftfigpresnum}{Figure }
+    \renewcommand{\cftfigaftersnum}{ --- }
+    \renewcommand{\cftfignumwidth}{65pt}
+    \newcommand{\tocsection}[1]{
+    \section*{#1}
+    \addcontentsline{toc}{section}{#1}
+    }
 
-\newenvironment{spaceditemize}{
-   \begin{list}{$\bullet$}
+    \newenvironment{spaceditemize}{
+    \begin{list}{$\bullet$}
     {
-      \setlength{\parskip}{0pt}
+    \setlength{\parskip}{0pt}
     }}
-      {\end{list}\bigskip
-}
+    {\end{list}\bigskip
+    }
 
 
 
