Fixed section font size

--- a/pd2.sty
+++ b/pd2.sty
@@ -3,7 +3,21 @@
 \usepackage{graphicx}
 \usepackage{tocloft}
 \usepackage{color}
+\usepackage{scrextend}
+\usepackage{titletoc}
+\usepackage{sectsty}
+\usepackage{fancyhdr}
+\usepackage[utf8]{inputenc}
 \usepackage[hmargin=1.5in, vmargin=1.5in]{geometry}
+
+% This is the styles files, you don't need to edit this whatsoever unless you
+% want to change the format of the report. As it is now, it conforms exactly
+% to the Spring 2013 PD2 Report Writing Guidelines
+
+
+\sectionfont{\normalsize}
+\subsectionfont{\normalsize}
+\subsubsectionfont{\normalsize}
 
 \newcommand{\faculty}[1]{
 \newcommand{\myFaculty}{#1}
