--- a/report.tex
+++ b/report.tex
@@ -1,9 +1,5 @@
 \documentclass[12pt]{article}
-\usepackage[utf8]{inputenc}
 \usepackage{pd2}
-\usepackage{scrextend}
-\usepackage{titletoc}
-\usepackage{fancyhdr}
 \usepackage{lipsum} % remove this
 
 % Your information
@@ -124,7 +120,7 @@
         \lipsum[10]
         \myFigure{0.10}{examplefigure.jpg}{Hello, World}
         \lipsum[11-12]
-        \myTable{0.4}{exampletable.png}{Hello, Table}
+        \myTable{0.3}{exampletable.png}{Hello, Table}
       }
     }
   }
@@ -139,6 +135,9 @@
   }
   %%%%%%% This is an example, remove this entire block %%%%%%%%%
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+  \newpage % This creates a new page, your may or may not want this, remove at your own discretion
+
 }
 
 % Conclusions
