Fixed APA format for references

--- a/report.tex
+++ b/report.tex
@@ -172,8 +172,7 @@
   \makereferences{
       % Add each reference like this, with some label for each item
       \bibitem{labelName}
-      Champion, R., Paci, T. \& Vardon, J. (2012). 1121t1125 PD 2: Critical Reflection and Report Writing. Retrieved 1 March, 2012 from \url{https://learn.uwaterloo.ca/d2l/le/content/80224/viewContent/605550/View}
-
+      Champion, R., Paci, T. \& Vardon, J. (2012). PD 2: Critical Reflection and Report Writing. Retrieved 1 March, 2012 from https://learn.uwaterloo.ca/d2l/le/content/80224/viewContent/605550/View
   }
 }
 
