--- a/pd2.sty
+++ b/pd2.sty
@@ -139,9 +139,36 @@
     \newpage
     }
 
+    \makeatletter
+    \renewcommand\@biblabel[1]{#1} % No brackets for the references
+    \renewenvironment{thebibliography}[1]
+         {\section*{\refname}%
+          \@mkboth{\MakeUppercase\refname}{\MakeUppercase\refname}%
+          \list{\@biblabel{\@arabic\c@enumiv}}%
+               {\settowidth\labelwidth{\@biblabel{#1}}%
+                \leftmargin\labelwidth
+                \advance\leftmargin20pt% change 20 pt according to your needs
+                \advance\leftmargin\labelsep
+                \setlength\itemindent{-20pt}% change using the inverse of the length used before
+                \@openbib@code
+                \usecounter{enumiv}%
+                \let\p@enumiv\@empty
+                \renewcommand\theenumiv{\@arabic\c@enumiv}}%
+          \sloppy
+          \clubpenalty4000
+          \@clubpenalty \clubpenalty
+          \widowpenalty4000%
+          \sfcode`\.\@m}
+         {\def\@noitemerr
+           {\@latex@warning{Empty `thebibliography' environment}}%
+          \endlist}
+    \renewcommand\newblock{\hskip .11em\@plus.33em\@minus.07em}
+    \makeatother
+
     \newcommand{\makereferences}[1]{
+    \newpage
     \addcontentsline{toc}{section}{References}
-    \begin{thebibliography}{9}
+    \begin{thebibliography}{99\kern\bibindent}
     #1
     \end{thebibliography}
     \newpage
