--- a/report.tex
+++ b/report.tex
@@ -67,7 +67,7 @@
 }
 
 % Introduction
-%   Write your introduction here
+%   Write an introduction here
 \newcommand{\introduction}{
   \fancyhf{}
   \pagestyle{fancy}
