fixed 'hardcoded' titlepage
If you keep these as the text, then changing values in the .tex won't change anything to the pdf.

--- a/pd2.sty
+++ b/pd2.sty
@@ -24,11 +24,11 @@
 }
 
 \newcommand{\reporttitle}[1] {
-\newcommand{\myTitle}{Lorem Ipsum}
+\newcommand{\myTitle}{#1}
 }
 
 \newcommand{\fullname}[1] {
-\newcommand{\myName}{Liam Horne}
+\newcommand{\myName}{#1}
 }
 
 \newcommand{\term}[1] {
@@ -36,23 +36,23 @@
 }
 
 \newcommand{\program}[1] {
-\newcommand{\myProgram}{Computer Science}
+\newcommand{\myProgram}{#1}
 }
 
 \newcommand{\studentid}[1] {
-\newcommand{\myIdNumber}{20465555}
+\newcommand{\myIdNumber}{#1}
 }
 
 \newcommand{\address}[1] {
-\newcommand{\myAddress}{123 Apple Street}
+\newcommand{\myAddress}{#1}
 }
 
 \newcommand{\city}[1] {
-\newcommand{\myCity}{Cambridge, Ontario}
+\newcommand{\myCity}{#1}
 }
 
 \newcommand{\postalcode}[1] {
-\newcommand{\myPostalCode}{A1X B2Y}
+\newcommand{\myPostalCode}{#1}
 }
 
 \newcommand{\pdtitle}[1] {
