Missed a few hardcoded fields + Waterloo is a constant location

--- a/pd2.sty
+++ b/pd2.sty
@@ -32,7 +32,7 @@
 }
 
 \newcommand{\term}[1] {
-\newcommand{\myTerm}{2A}
+\newcommand{\myTerm}{#1}
 }
 
 \newcommand{\program}[1] {
@@ -56,12 +56,10 @@
 }
 
 \newcommand{\pdtitle}[1] {
-\newcommand{\myPD}{PD2: Critical Reflection and Report Writing}
+\newcommand{\myPD}{#1}
 }
 
-\newcommand{\waterloolocation}[1] {
 \newcommand{\myUwLocation}{Waterloo, Ontario}
-}
 
 \newlength\mylen
 \settowidth\mylen{Figure\ }
