I guess it's not "My" anymore!

--- a/pd2.sty
+++ b/pd2.sty
@@ -59,7 +59,7 @@
 \newcommand{\myPD}{#1}
 }
 
-\newcommand{\myUwLocation}{Waterloo, Ontario}
+\newcommand{\UwLocation}{Waterloo, Ontario}
 
 \newlength\mylen
 \settowidth\mylen{Figure\ }
