--- a/report.tex
+++ b/report.tex
@@ -22,7 +22,7 @@
   \waterlootitlepage
     {\myFaculty}
     {\myTitle}
-    {\myPD \\ \myUwLocation}
+    {\myPD \\ \UwLocation}
     {\myName \\ \myTerm \ \myProgram \\ ID \myIdNumber \\ \today}
 }
 
