updated personal information
- changed names and location/address/term/year

--- a/pd2.sty
+++ b/pd2.sty
@@ -23,43 +23,43 @@
 \newcommand{\myFaculty}{#1}
 }
 
-\newcommand{\reporttitle}[1] {
-\newcommand{\myTitle}{Lorem Ipsum}
+\newcommand{\reporttitle}[1]{
+\newcommand{\myTitle}{Rapid Prototyping of Machine Learning pipelines in Python}
 }
 
-\newcommand{\fullname}[1] {
-\newcommand{\myName}{Liam Horne}
+\newcommand{\fullname}[1]{
+\newcommand{\myName}{Jiaxin Liu}
 }
 
-\newcommand{\term}[1] {
-\newcommand{\myTerm}{2A}
+\newcommand{\term}[1]{
+\newcommand{\myTerm}{3A}
 }
 
-\newcommand{\program}[1] {
-\newcommand{\myProgram}{Computer Science}
+\newcommand{\program}[1]{
+\newcommand{\myProgram}{Scientific Computation}
 }
 
-\newcommand{\studentid}[1] {
-\newcommand{\myIdNumber}{20465555}
+\newcommand{\studentid}[1]{
+\newcommand{\myIdNumber}{20468322}
 }
 
-\newcommand{\address}[1] {
-\newcommand{\myAddress}{123 Apple Street}
+\newcommand{\address}[1]{
+\newcommand{\myAddress}{45 Rothbury Rd}
 }
 
-\newcommand{\city}[1] {
-\newcommand{\myCity}{Cambridge, Ontario}
+\newcommand{\city}[1]{
+\newcommand{\myCity}{Richmond Hill, Ontario}
 }
 
-\newcommand{\postalcode}[1] {
-\newcommand{\myPostalCode}{A1X B2Y}
+\newcommand{\postalcode}[1]{
+\newcommand{\myPostalCode}{L4S0B3}
 }
 
-\newcommand{\pdtitle}[1] {
-\newcommand{\myPD}{PD2: Critical Reflection and Report Writing}
+\newcommand{\pdtitle}[1]{
+\newcommand{\myPD}{Work Term Report}
 }
 
-\newcommand{\waterloolocation}[1] {
+\newcommand{\waterloolocation}[1]{
 \newcommand{\myUwLocation}{Waterloo, Ontario}
 }
 
