updated title and supervisor

--- a/report.tex
+++ b/report.tex
@@ -5,15 +5,16 @@
 % Your information
 %   Enter your report information here
 \faculty{Faculty of Mathematics}
-\reporttitle{Lorem Ipsum}
-\fullname{Liam Horne}
-\term{2A}
-\program{Computer Science}
-\studentid{20465555}
-\address{123 Apple Street}
-\city{Cambridge, Ontario}
-\postalcode{A1X B2Y}
-\pdtitle{PD2: Critical Reflection and Report Writing}
+\reporttitle{Rses in Python,
+\\ why we should use it and when we should stop.}
+\fullname{Jiaxin Liu}
+\term{3A}
+\program{Scientific Computation}
+\studentid{20468322}
+\address{45 Rothbury Rd}
+\city{Richmond Hill, Ontario}
+\postalcode{L4S0B3}
+\pdtitle{Work Term Report: Under supervision of Dr. Rumi Chunara at New York University}
 \waterloolocation{Waterloo, Ontario}
 
 % Title Page (ignore)
@@ -35,9 +36,7 @@
     {\myAddress}{\myCity}{\myPostalCode}{\myName}{\myIdNumber}
     {
 
-    \lipsum[1] % remove this line
-
-    % Write your letter here
+    As we agreed, I have prepared the enclosed report "Using Python for 
 
     }
     {
