--- a/pd2.sty
+++ b/pd2.sty
@@ -24,7 +24,7 @@
 }
 
 \newcommand{\reporttitle}[1]{
-\newcommand{\myTitle}{Rapid Prototyping of Machine Learning pipelines in Python}
+\newcommand{\myTitle}{Using Python for Machine Learning Pipelines and when we should stop}
 }
 
 \newcommand{\fullname}[1]{
@@ -56,7 +56,7 @@
 }
 
 \newcommand{\pdtitle}[1]{
-\newcommand{\myPD}{Work Term Report}
+\newcommand{\myPD}{Under the supervision of Dr. Rumi Chunara at New York University}
 }
 
 \newcommand{\waterloolocation}[1]{
