--- a/pd2.sty
+++ b/pd2.sty
@@ -115,13 +115,12 @@
     #2 \\
     #3 \\ \\
     \today \\ \\
-    Mr. Tim Paci, PD2 Instructor \\
-    Professional Development Program \\
-    University of Waterloo \\
-    200 University Avenue West \\
-    Waterloo, Ontario \\
-    N2L 3G1 \\ \\
-    Dear Mr. Paci: \\
+    Dr. Rumi Chunara, Assistant Professor\\
+    NYU Global Institute of Public Health\\
+    41 E 11th St\\
+    New York, NY 10003\\
+    \\
+    Dear Dr. Chunara: \\
 
     #6
 
