added the letter

--- a/report.tex
+++ b/report.tex
@@ -36,8 +36,16 @@
     {\myAddress}{\myCity}{\myPostalCode}{\myName}{\myIdNumber}
     {
 
-    As we agreed, I have prepared the enclosed report "Using Python for 
-
+    As we agreed, I have prepared the enclosed report "Using Python for Machine Learning Pipelines and when to stop." for my 3A work report and for ChunaraLab. This report, second of four reports that the school requires I complete as a part of my coop degree requirements, has not received academic credit.
+    \\
+    \\
+    This summer I was a research intern at ChunaraLab. My research project was to build a machine learning pipeline to identify social medias posts that where alcohol related and to try to find instances of binge drinking and other problem drinking symptoms at a population level. This report is a analysis of why python should be used to build the tools I used and when and why we might have to switch to a different toolset in the future.
+    \\
+    \\
+    The Faculty of Mathematics requests that you evaluate this report for command of topic and technical content/analysis. Following your assessment, the report, together with you evaluation will be submitted to the Math Undergrad Office for evaluation on  campus by qualified work report markers. The combined marks determine whether the report will receive credit and whether it will be considered for an award.
+    \\
+    \\
+    Thank you for your assistance in preparing this report.
     }
     {
     % Attach an image of your signature
