Chnages prof name s/paci/champion/

--- a/pd2.sty
+++ b/pd2.sty
@@ -113,13 +113,13 @@
     #2 \\
     #3 \\ \\
     \today \\ \\
-    Mr. Tim Paci, PD2 Instructor \\
+    Mr. Ron Champion, PD2 Instructor \\
     Professional Development Program \\
     University of Waterloo \\
     200 University Avenue West \\
     Waterloo, Ontario \\
     N2L 3G1 \\ \\
-    Dear Mr. Paci: \\
+    Dear Mr. Champion: \\
 
     #6
 
